# Authentication-

./: .gitignore  Anchor.toml  package-lock.json  package.json  program_id.json  response.json
backend/: .env  id.json  main.py  requirements.txt
backend/app/: config.py
backend/app/routes/: cert_route.py  certificates.py  issuers.py
backend/app/services/: cert_service.py  cert_store.py  crypto_service.py  ipfs_service.py  solana_service.py
backend/app/utils/: pdf_utils.py
blockchain/solana-program/cert_program/: Anchor.toml  package-lock.json  tsconfig.json
blockchain/solana-program/cert_program/programs/cert_program/: Cargo.toml
blockchain/solana-program/cert_program/programs/cert_program/src/: lib.rs
blockchain/solana-program/cert_program/tests/: cert_program.ts
docs/samples/: certificate-sample.json
frontend/: package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json
frontend/src/: App.tsx  index.css
frontend/src/pages/: Dashboard.tsx  Home.tsx  Upload.tsx  Verify.tsx
my-cert-project/programs/my-cert-project/src/: lib.rs
my-cert-project/tests/: cert_program.ts
programs/cert-program/: Cargo.toml
programs/cert-program/src/: lib.rs
solana_cert/: Anchor.toml  README.md
solana_cert/programs/cert-program/: Cargo.toml
solana_cert/programs/cert-program/src/: lib.rs
tests/: cert_program.ts  decrypt_from_response.py
